finished rework